...
                            child: SizedBox(
                              height: 56,
                              child: Column(
                                mainAxisAlignment: MainAxisAlignment.center,
                                children: [
                                  Text(
                                    '$d',
                                    style: NlText.title.copyWith(
                                      color: canEdit
                                          ? NlColors.ink
                                          : NlColors.ink3,
                                    ),
                                  ),
...
